Commit: 1. Various formatting changes on the front end     Fixed white border on the background image in the ProductStore when light theme is on     Changed how format and price are shown, still WIP     Added a separate overflow for the div holding the products on the home page 2. Started very basic work on the filter component

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,7 +1,7 @@
 :root {
   --text: #6b6375;
   --text-h: #08060d;
-  --bg: #fff;
+  --bg: #FEFDEF;
   --border: #e5e4e7;
   --code-bg: #f4f3ec;
   --accent: #aa3bff;
@@ -17,6 +17,9 @@
   --heading: Munro, 'Pixelify Sans', system-ui, 'Segoe UI', Roboto, sans-serif;
   --mono: ui-monospace, Consolas, monospace;
 
+  --brightness: 30%;
+  --scale: 1.1;
+  
   font: 18px/145% var(--sans);
   letter-spacing: 0.18px;
   color-scheme: light dark;
@@ -34,6 +37,8 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
+    --scale: 1;
+    --brightness: 15%;
     --text: #9ca3af;
     --text-h: #f3f4f6;
     --bg: #181A1B;
@@ -62,6 +67,7 @@
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
+  padding-bottom: 1%;
 }
 
 @font-face {
