--- a/client/src/styles/ProductPage.css
+++ b/client/src/styles/ProductPage.css
@@ -35,14 +35,13 @@
 }
 
 .background-style-prod-page{
-    position: absolute;
-    width: 100%;
-    height: 100%;
     top: 0;
     left: 0;
-    background-size: cover;
-    background-position: center;
-    filter: blur(10px) brightness(15%);
+    min-height: 100vh;
+    width: 100vw;
+    filter: blur(10px) brightness(var(--brightness));
+    z-index: -1;
+    scale: var(--scale)
 }
 
 .title{
@@ -51,6 +50,7 @@
     text-wrap: balance;
     word-break: break-word;
     text-align: center;
+    padding-bottom: 2em;
 }
 
 .title h1{
