--- a/client/src/styles/Store.css
+++ b/client/src/styles/Store.css
@@ -3,4 +3,6 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
+    overflow-y: scroll;
+    max-height: 100vh;
 }
